# IonosphericScintillation

./: .gitignore  README.md  Uran4Scintillation.spec  app.py  example.ipynb  latex_report_body.txt  pyproject.toml
.github/workflows/: ci.yml
Data/: regi18-1-2013.txt  regi23-2-2013.txt  regi4-1-2013.txt
core/: config.py  parsers.py  signal_processing.py  spectral_analysis.py  synthetic_generator.py  types.py
docs/: benchmarks.md  theory.md
gui/: batch_export_dialog.py  constants.py  main_window.py  plotting.py  settings_tab.py  spectral_tab.py  tabs.py  workers.py
images/: BatchExportSettings.txt
scripts/: benchmark_scaling.py
tests/: test_benchmarks.py  test_multitaper.py  test_parsers.py  test_pchip.py  test_preprocessing.py  test_scientific.py  test_statistical_precision.py  test_synthetic.py  test_validation.py  test_velocity.py
