[project]
name = "ionosphericscintillation"
version = "0.1.0"
description = "Signal processing and time-frequency analysis suite for URAN-4 ionospheric scintillation data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
    "scipy>=1.17.1",
    "ssqueezepy>=0.6.6",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyinstaller>=6.21.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]


